--- a/assets/css/index/index.less
+++ b/assets/css/index/index.less
@@ -100,4 +100,34 @@
             }
         }
     }
+    .index_cat {
+        width: calc(100% + 20px);
+        height: 183px;
+        overflow: hidden;
+        margin-left: -10px;
+        margin-top: 30px;
+        a {
+            float: left;
+            width: 285px;
+            height: 183px;
+            margin: 0px 10px;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+        img {
+            width: 100%;
+        }
+    }
+    .todayNew {
+        .ring {
+            font-size: 18px;
+            em {
+                padding: 1px 6px;
+                font-size: 18px;
+                background: #ff3366;
+                color: #fff;
+                margin: 0px 4px;
+            }
+        }
+    }
 }
