--- a/assets/css/detail/hot.less
+++ b/assets/css/detail/hot.less
@@ -1,5 +1,5 @@
 .detail-hot {
-    height: 410px;
+    min-height: 410px;
     padding: 14px;
     border: 1px solid #eee;
     background: #fff;
@@ -20,6 +20,9 @@
             line-height: 22px;
             border-bottom: 1px dotted #ddd;
             overflow: hidden;
+            &:hover {
+                background-color: #f6f6f6;
+            }
             img {
                 float: left;
                 width: 55px;
