--- a/assets/css/index/listshop.less
+++ b/assets/css/index/listshop.less
@@ -43,6 +43,9 @@
             }
             h5 {
                 .hbase;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
                 line-height: 22px;
                 i {
                     float: left;
